--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "clean": "rm -r out deploy",
     "build-win": "tsc && xcopy data out\\data /s /i /y && xcopy html out\\html /s /i /y",
     "clean-win": "rmdir /S /Q out deploy",
-    "deploy-win": "yarn build-win && xcopy out deploy /s /i && xcopy run.sh deploy && xcopy yarn.lock deploy && xcopy package.json deploy"
+    "deploy-win": "yarn build-win && xcopy out deploy /s /i /y && xcopy run.sh deploy /y && xcopy yarn.lock deploy /y && xcopy package.json deploy /y"
   }
 }
