--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,6 @@
     "compilerOptions": {
         "outDir": "out"
     },
-    "include": ["src/*"]
+    "include": ["src/*"],
+    "exclude": ["src/scripts/*"]
 }
