I'm not sure what I've done (if in doubt, git rollback)

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "mongoose": "^6.0.13"
   },
   "scripts": {
-    "build": "tsc && cp -R -f data out && cp -R -f html out",
+    "build": "tsc && cp -R -f ./config.json out && cp -R -f html out",
     "start": "node out/index.js",
     "deploy": "yarn build && cp -R -f out deploy && cp run.sh deploy && cp yarn.lock deploy && cp package.json deploy",
     "clean": "rm -r out deploy",
