--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@hapi/inert": "^6.0.3",
     "@types/node": "^15.6.0",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "luxon": "^2.0.2",
     "mongoose": "^6.0.13"
@@ -23,6 +24,7 @@
     "deploy-win": "yarn build-win && xcopy out deploy /s /i /y && xcopy run.sh deploy /y && xcopy yarn.lock deploy /y && xcopy package.json deploy /y && xcopy html deploy/html /s /i /y"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/luxon": "^2.0.7",
     "@types/mongoose": "^5.11.97"
   }
