--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "@hapi/cookie": "^11.0.2",
     "@hapi/hapi": "^20.1.3",
     "@hapi/inert": "^6.0.3",
-    "@types/node": "^15.6.0",
-    "axios": "^0.21.1",
+    "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "luxon": "^2.0.2",
-    "mongoose": "^6.0.13"
+    "mongoose": "^6.0.13",
+    "twitter-api-v2": "^1.8.0"
   },
   "scripts": {
     "build": "tsc",
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/luxon": "^2.0.7",
-    "@types/mongoose": "^5.11.97"
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^15.6.0"
   }
 }
