--- a/package.json
+++ b/package.json
@@ -22,12 +22,18 @@
     "clean": "rm -r out deploy",
     "build-win": "tsc",
     "clean-win": "rmdir /S /Q out deploy",
-    "deploy-win": "yarn build-win && xcopy out deploy /s /i /y && xcopy run.sh deploy /y && xcopy yarn.lock deploy /y && xcopy package.json deploy /y && xcopy html deploy\\html /s /i /y"
+    "deploy-win": "yarn build-win && xcopy out deploy /s /i /y && xcopy run.sh deploy /y && xcopy yarn.lock deploy /y && xcopy package.json deploy /y && xcopy html deploy\\html /s /i /y",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/luxon": "^2.0.7",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^15.6.0"
+    "@types/node": "^15.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.6.0",
+    "eslint-plugin-vue": "^8.3.0",
+    "typescript": "^4.5.4"
   }
 }
