more ESLint rules & fixes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,5 +24,24 @@
         "deploy/*"
     ],
     "rules": {
+        "no-duplicate-imports": "warn",
+        "no-self-compare": "warn",
+        "no-unmodified-loop-condition": "warn",
+        "no-unreachable-loop": "error",
+        "camelcase": "warn",
+        "class-methods-use-this": "error",
+        "curly": ["warn", "multi-line"],
+        "default-case-last": "error",
+        "dot-notation": "error",
+        "func-style": ["error", "declaration"],
+        "multiline-comment-style": "warn",
+        "no-undef-init": "error",
+        "no-var": "error",
+        "block-spacing": "error",
+        "brace-style": ["error", "1tbs", { "allowSingleLine": true }],
+        "comma-spacing": ["error", { "before": false, "after": true }],
+        "indent": ["error", 4, { "SwitchCase": 1, "ObjectExpression": "first", "ArrayExpression": "first", "MemberExpression": "off" }],
+        "linebreak-style": "error",
+        "no-trailing-spaces": ["warn", {"skipBlankLines": true}]
     }
 }
