Added changelog page

--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
     "start": "node out/index.js",
     "deploy": "yarn build && cp -R -f out deploy && cp run.sh deploy && cp yarn.lock deploy && cp package.json deploy && cp -R -f html deploy/html",
     "clean": "rm -r out deploy",
-    "build-win": "tsc",
     "clean-win": "rmdir /S /Q out deploy",
-    "deploy-win": "yarn build-win && xcopy out deploy /s /i /y && xcopy run.sh deploy /y && xcopy yarn.lock deploy /y && xcopy package.json deploy /y && xcopy html deploy\\html /s /i /y",
+    "deploy-win": "yarn build && xcopy out deploy /s /i /y && xcopy run.sh deploy /y && xcopy yarn.lock deploy /y && xcopy package.json deploy /y && xcopy html deploy\\html /s /i /y",
     "lint": "eslint ."
   },
   "devDependencies": {
