--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "RRPlayerStatistics",
-  "version": "1.0.0",
+  "name": "rrstats",
+  "version": "2.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
