--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/hapi__cookie": "^10.1.4",
+    "@types/hapi__hapi": "^20.0.10",
+    "@types/hapi__inert": "^5.2.3",
     "@types/luxon": "^2.0.7",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "^15.6.0",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
