Added 'dev' script to avoid re-building code each time in favor of ts-node

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "twitter-api-v2": "^1.8.0"
   },
   "scripts": {
+    "dev": "ts-node --files src/index.ts",
     "build": "tsc",
     "start": "node out/index.js",
     "deploy": "yarn build && ts-node deploy.ts",
