--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
         "@nuxt/eslint": "^0.4.0",
         "@nuxtjs/tailwindcss": "^6.10.2",
         "@types/luxon": "^3.3.3",
+        "@types/object-hash": "^3.0.6",
         "@typescript-eslint/eslint-plugin": "^6.11.0",
         "@typescript-eslint/parser": "^6.11.0",
+        "csv-writer": "^1.6.0",
         "eslint": "^8.57.0",
         "eslint-plugin-vue": "^9.18.1",
         "nuxt": "^3.7.4",
+        "object-hash": "^3.0.0",
         "prettier": "^3.1.0",
         "sass": "^1.69.4",
         "vue": "^3.3.4",
-        "vue-router": "^4.2.5",
-        "csv-writer": "^1.6.0"
+        "vue-router": "^4.2.5"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.4.2",
