Update types and props of tables

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "preview": "nuxt preview",
         "postinstall": "nuxt prepare",
         "prettier": "prettier . --write",
-        "lint": "eslint ."
+        "lint": "eslint .",
+        "typecheck": "nuxt typecheck"
     },
     "devDependencies": {
         "@nuxt/devtools": "latest",
