Updated nuxt and dependencies, fixed useFetch usage

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "extends": "./.nuxt/tsconfig.json",
     "compilerOptions": {
         "experimentalDecorators": true,
-        "strictPropertyInitialization": false
+        "strictPropertyInitialization": false,
+        "module": "ESNext"
     }
 }
