--- a/package.json
+++ b/package.json
@@ -13,35 +13,36 @@
         "typecheck": "nuxt typecheck"
     },
     "devDependencies": {
-        "@nuxt/devtools": "latest",
+        "@fast-csv/format": "^5.0.0",
+        "@nuxt/devtools": "^1.3.9",
         "@nuxt/eslint": "^0.4.0",
-        "@nuxtjs/tailwindcss": "^6.10.2",
-        "@types/luxon": "^3.3.3",
+        "@nuxtjs/tailwindcss": "^6.12.1",
+        "@types/luxon": "^3.4.2",
         "@types/object-hash": "^3.0.6",
-        "@typescript-eslint/eslint-plugin": "^6.11.0",
-        "@typescript-eslint/parser": "^6.11.0",
-        "csv-writer": "^1.6.0",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "@typescript-eslint/parser": "^6.21.0",
+        "csv-stringify": "^6.5.1",
         "eslint": "^8.57.0",
-        "eslint-plugin-vue": "^9.18.1",
-        "nuxt": "^3.7.4",
+        "eslint-plugin-vue": "^9.27.0",
+        "nuxt": "^3.12.4",
         "object-hash": "^3.0.0",
-        "prettier": "^3.1.0",
-        "sass": "^1.69.4",
+        "prettier": "^3.3.3",
+        "sass": "^1.77.8",
         "vue": "^3.3.4",
-        "vue-router": "^4.2.5"
+        "vue-router": "^4.4.3"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^6.4.2",
-        "@fortawesome/free-brands-svg-icons": "^6.4.2",
-        "@fortawesome/free-regular-svg-icons": "^6.4.2",
-        "@fortawesome/free-solid-svg-icons": "^6.4.2",
-        "@fortawesome/vue-fontawesome": "^3.0.5",
-        "axios": "^1.6.0",
-        "chart.js": "^4.4.0",
-        "luxon": "^3.4.3",
-        "reflect-metadata": "^0.1.13",
-        "sqlite3": "^5.1.6",
-        "twitter-api-v2": "^1.16.0",
-        "typeorm": "^0.3.17"
+        "@fortawesome/fontawesome-svg-core": "^6.6.0",
+        "@fortawesome/free-brands-svg-icons": "^6.6.0",
+        "@fortawesome/free-regular-svg-icons": "^6.6.0",
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/vue-fontawesome": "^3.0.8",
+        "axios": "^1.7.3",
+        "chart.js": "^4.4.3",
+        "luxon": "^3.5.0",
+        "reflect-metadata": "^0.1.14",
+        "sqlite3": "^5.1.7",
+        "twitter-api-v2": "^1.17.2",
+        "typeorm": "^0.3.20"
     }
 }
