--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@nuxt/devtools": "^1.3.9",
         "@nuxt/eslint": "^0.4.0",
         "@nuxtjs/tailwindcss": "^6.12.1",
+        "@types/lodash": "^4.17.7",
         "@types/luxon": "^3.4.2",
         "@types/object-hash": "^3.0.6",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -38,6 +39,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/vue-fontawesome": "^3.0.8",
         "chart.js": "^4.4.3",
+        "lodash": "^4.17.21",
         "luxon": "^3.5.0",
         "reflect-metadata": "^0.1.14",
         "sqlite3": "^5.1.7",
