--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@fast-csv/format": "^5.0.0",
         "@nuxt/devtools": "^1.3.9",
         "@nuxt/eslint": "^0.4.0",
+        "@nuxtjs/robots": "^4.1.3",
         "@nuxtjs/tailwindcss": "^6.12.1",
         "@types/lodash": "^4.17.7",
         "@types/luxon": "^3.4.2",
