--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
         "lint": "eslint .",
         "typecheck": "nuxt typecheck",
         "script": "tsx --tsconfig ./server/tsconfig.json",
+        "test": "vitest",
         "sqlite2pg": "tsx --tsconfig ./server/tsconfig.json ./server/scripts/2024-09-26-sqliteToPG.ts"
     },
     "devDependencies": {
         "@fast-csv/format": "^5.0.0",
         "@nuxt/devtools": "^1.3.9",
         "@nuxt/eslint": "^0.4.0",
+        "@nuxt/test-utils": "^3.15.1",
         "@nuxtjs/robots": "^4.1.3",
         "@nuxtjs/tailwindcss": "^6.12.1",
         "@types/lodash": "^4.17.7",
@@ -25,14 +27,17 @@
         "@types/object-hash": "^3.0.6",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "@typescript-eslint/parser": "^6.21.0",
+        "@vue/test-utils": "^2.4.6",
         "csv-stringify": "^6.5.1",
         "eslint": "^8.57.0",
         "eslint-plugin-vue": "^9.27.0",
+        "happy-dom": "^15.11.7",
         "nuxt": "^3.13.2",
         "object-hash": "^3.0.0",
         "prettier": "^3.3.3",
         "sass": "^1.77.8",
         "tsx": "^4.19.1",
+        "vitest": "^2.1.8",
         "vue": "^3.3.4",
         "vue-router": "^4.4.3"
     },
