--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/object-hash": "^3.0.6",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "@typescript-eslint/parser": "^6.21.0",
+        "@vitest/coverage-v8": "^2.1.8",
         "@vue/test-utils": "^2.4.6",
         "csv-stringify": "^6.5.1",
         "eslint": "^8.57.0",
