--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "lint": "eslint .",
         "typecheck": "nuxt typecheck",
         "script": "tsx --tsconfig ./server/tsconfig.json",
-        "test": "vitest",
+        "test:unit": "vitest",
+        "test:e2e": "playwright test",
+        "test": "npm run test:unit && npm run test:playwright",
         "sqlite2pg": "tsx --tsconfig ./server/tsconfig.json ./server/scripts/2024-09-26-sqliteToPG.ts"
     },
     "devDependencies": {
@@ -33,8 +35,9 @@
         "eslint": "^8.57.0",
         "eslint-plugin-vue": "^9.27.0",
         "happy-dom": "^15.11.7",
-        "nuxt": "^3.13.2",
+        "nuxt": "^3.14.0",
         "object-hash": "^3.0.0",
+        "playwright-core": "^1.49.1",
         "prettier": "^3.3.3",
         "sass": "^1.77.8",
         "tsx": "^4.19.1",
@@ -48,6 +51,7 @@
         "@fortawesome/free-regular-svg-icons": "^6.6.0",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/vue-fontawesome": "^3.0.8",
+        "@playwright/test": "^1.49.1",
         "chart.js": "^4.4.3",
         "lodash": "^4.17.21",
         "luxon": "^3.5.0",
