--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,5 +34,20 @@ jobs:
                   npm install
                   npm run build
 
-            - name: Run tests
-              run: npm run test
+            - name: Install playwright
+              run: npx playwright install --with-deps
+
+            - name: Run unit tests
+              run: npm run test:unit
+
+            - name: Run e2e tests
+              id: e2e
+              continue-on-error: true
+              run: npm run test:e2e
+
+            - uses: actions/upload-artifact@v3
+              if: steps.e2e.conclusion === 'success'
+              with:
+                  name: playwright-report
+                  path: playwright-report/
+                  retention-days: 10
