--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,7 +46,7 @@ jobs:
               run: npm run test:e2e
 
             - uses: actions/upload-artifact@v3
-              if: steps.e2e.conclusion === 'success'
+              if: ${{ steps.e2e.conclusion === 'success' }}
               with:
                   name: playwright-report
                   path: playwright-report/
