--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,11 +42,10 @@ jobs:
 
             - name: Run e2e tests
               id: e2e
-              continue-on-error: true
               run: npm run test:e2e
 
             - uses: actions/upload-artifact@v3
-              if: ${{ steps.e2e.conclusion == 'success' }}
+              if: ${{ !cancelled() }}
               with:
                   name: playwright-report
                   path: playwright-report/
