--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,7 +31,7 @@ jobs:
 
             - name: Install and Build 🔧
               run: |
-                  npm install
+                  npm ci
                   npm run build
 
             - name: Install playwright
@@ -44,7 +44,7 @@ jobs:
               id: e2e
               run: npm run test:e2e
 
-            - uses: actions/upload-artifact@v3
+            - uses: actions/upload-artifact@v4
               if: ${{ !cancelled() }}
               with:
                   name: playwright-report
