Changed database to better-sqlite3 to improve performance

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "eslint": "^8.57.0",
         "eslint-plugin-vue": "^9.27.0",
         "happy-dom": "^15.11.7",
-        "nuxt": "^3.14.0",
+        "nuxt": "^3.15.1",
         "object-hash": "^3.0.0",
         "playwright-core": "^1.49.1",
         "prettier": "^3.3.3",
@@ -51,12 +51,12 @@
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/vue-fontawesome": "^3.0.8",
         "@playwright/test": "^1.49.1",
+        "better-sqlite3": "^9.0.0",
         "chart.js": "^4.4.3",
         "lodash": "^4.17.21",
         "luxon": "^3.5.0",
         "pg": "^8.13.0",
         "reflect-metadata": "^0.1.14",
-        "sqlite3": "^5.1.7",
         "twitter-api-v2": "^1.17.2",
         "typeorm": "^0.3.20"
     }
