--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
 
     test:
         needs: pre_job
-        if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
+        if: ${{ needs.pre_job.outputs.should_skip != 'true' && github.event.pull_request.draft == false }}
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
