Add changelog page

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "@nuxt/devtools": "^1.3.9",
         "@nuxt/eslint": "^0.4.0",
         "@nuxt/test-utils": "^3.15.1",
-        "@nuxtjs/robots": "^4.1.3",
+        "@nuxtjs/robots": "^5.2.10",
         "@nuxtjs/tailwindcss": "^6.12.1",
         "@types/lodash": "^4.17.7",
         "@types/luxon": "^3.4.2",
@@ -30,6 +30,8 @@
         "@typescript-eslint/parser": "^6.21.0",
         "@vitest/coverage-v8": "^2.1.8",
         "@vue/test-utils": "^2.4.6",
+        "@nuxt/content": "^3.5.1",
+        "@playwright/test": "^1.49.1",
         "csv-stringify": "^6.5.1",
         "eslint": "^8.57.0",
         "eslint-plugin-vue": "^9.27.0",
@@ -50,7 +52,6 @@
         "@fortawesome/free-regular-svg-icons": "^6.6.0",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/vue-fontawesome": "^3.0.8",
-        "@playwright/test": "^1.49.1",
         "better-sqlite3": "^11.0.0",
         "chart.js": "^4.4.3",
         "lodash": "^4.17.21",
