--- a/package.json
+++ b/package.json
@@ -17,47 +17,47 @@
         "sqlite2pg": "tsx --tsconfig ./server/tsconfig.json ./server/scripts/2024-09-26-sqliteToPG.ts"
     },
     "devDependencies": {
-        "@fast-csv/format": "^5.0.0",
+        "@fast-csv/format": "^5.0.2",
         "@nuxt/content": "^3.5.1",
-        "@nuxt/devtools": "^1.3.9",
-        "@nuxt/eslint": "^0.4.0",
-        "@nuxt/test-utils": "^3.15.1",
+        "@nuxt/devtools": "^2.4.0",
+        "@nuxt/eslint": "^1.3.0",
+        "@nuxt/test-utils": "^3.18.0",
         "@nuxtjs/robots": "^5.2.10",
-        "@nuxtjs/tailwindcss": "^6.12.1",
-        "@playwright/test": "^1.49.1",
-        "@types/lodash": "^4.17.7",
-        "@types/luxon": "^3.4.2",
+        "@nuxtjs/tailwindcss": "^6.14.0",
+        "@playwright/test": "^1.52.0",
+        "@types/lodash": "^4.17.16",
+        "@types/luxon": "^3.6.2",
         "@types/object-hash": "^3.0.6",
-        "@typescript-eslint/eslint-plugin": "^6.21.0",
-        "@typescript-eslint/parser": "^6.21.0",
-        "@vitest/coverage-v8": "^2.1.8",
+        "@typescript-eslint/eslint-plugin": "^8.32.0",
+        "@typescript-eslint/parser": "^8.32.0",
+        "@vitest/coverage-v8": "^3.1.3",
         "@vue/test-utils": "^2.4.6",
-        "csv-stringify": "^6.5.1",
-        "eslint": "^8.57.0",
-        "eslint-plugin-vue": "^9.27.0",
-        "happy-dom": "^15.11.7",
-        "nuxt": "^3.15.1",
+        "csv-stringify": "^6.5.2",
+        "eslint": "^9.26.0",
+        "eslint-plugin-vue": "9.27.0",
+        "happy-dom": "^17.4.6",
+        "nuxt": "^3.16.2",
         "object-hash": "^3.0.0",
-        "playwright-core": "^1.49.1",
-        "prettier": "^3.3.3",
-        "sass": "^1.77.8",
-        "tsx": "^4.19.1",
-        "vitest": "^2.1.8",
+        "playwright-core": "^1.52.0",
+        "prettier": "^3.5.3",
+        "sass": "^1.87.0",
+        "tsx": "^4.19.4",
+        "vitest": "^3.1.3",
         "vue": "^3.3.4",
         "vue-router": "^4.4.3"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^6.6.0",
-        "@fortawesome/free-brands-svg-icons": "^6.6.0",
-        "@fortawesome/free-regular-svg-icons": "^6.6.0",
-        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-brands-svg-icons": "^6.7.2",
+        "@fortawesome/free-regular-svg-icons": "^6.7.2",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/vue-fontawesome": "^3.0.8",
         "better-sqlite3": "^11.0.0",
-        "chart.js": "^4.4.3",
+        "chart.js": "^4.4.9",
         "lodash": "^4.17.21",
-        "luxon": "^3.5.0",
-        "pg": "^8.14.1",
-        "reflect-metadata": "^0.1.14",
+        "luxon": "^3.6.1",
+        "pg": "^8.15.6",
+        "reflect-metadata": "^0.2.2",
         "typeorm": "^0.3.22"
     }
 }
