--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,6 +29,16 @@ jobs:
               with:
                   node-version: "20"
 
+            - name: Cache Playwright dependencies
+              uses: actions/cache@v3
+              with:
+                path: |
+                  ~/.cache/ms-playwright
+                  node_modules
+                key: ${{ runner.os }}-playwright-${{ hashFiles('**/package-lock.json') }}
+                restore-keys: |
+                  ${{ runner.os }}-playwright-
+
             - name: Install and Build 🔧
               run: |
                   npm ci
