--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "luxon": "^3.6.1",
         "pg": "^8.15.6",
         "reflect-metadata": "^0.2.2",
-        "typeorm": "^0.3.22"
+        "typeorm": "^0.3.22",
+        "uuid": "^11.1.0"
     }
 }
