--- a/.github/workflows/typecheck.yml
+++ b/.github/workflows/typecheck.yml
@@ -12,5 +12,7 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                   node-version: "20"
+            - name: Install
+              run: npm ci
             - name: Run typecheck
               run: npm run typecheck
