--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@playwright/test": "^1.52.0",
         "@types/lodash": "^4.17.16",
         "@types/luxon": "^3.6.2",
+        "@types/node": "^24.6.2",
         "@types/object-hash": "^3.0.6",
         "@typescript-eslint/eslint-plugin": "^8.32.0",
         "@typescript-eslint/parser": "^8.32.0",
